--- a/src/sass/comment.scss
+++ b/src/sass/comment.scss
@@ -24,10 +24,11 @@
     }
 
     &_photoUser{
-        width: 15px;
+        width: 20px;
         max-width: 30px;
-        min-height: 15px;
+        min-height: 20px;
         max-height: 30px;
+        border-radius: 50%;
     }
 
     &_nameUser{
