--- a/src/sass/landingPage.scss
+++ b/src/sass/landingPage.scss
@@ -2,7 +2,6 @@
 
 .landingPage{
     width: 100%;
-    //max-width: 600px;
     @include flex-column-center;
     background-color: #EDE5DB;
 
@@ -12,8 +11,9 @@
 
     &_header{
         width: 100%;
-        min-height: 60px;
+        min-height: 50px;
         @include perfect-center;
+        justify-content: space-between;
         padding: 5px 0;
         background-color: #fff;
     }
@@ -32,14 +32,8 @@
         max-width: 600px;
         margin: 30px 10px 50px;
         @include flex-column-center;
-        gap: 40px;
+        gap: 60px;
 
-    }
-    
-    &_main--welcomeBox{
-        // width: 100%;
-        // @include flex-column-center;
-        // gap: 20px;    
     }
 
     &_footer{
@@ -52,21 +46,21 @@
 
 .header{
     &_top{
-        width: 90%;
+        width: 100%;
         @include flex-row-spaceBetween;
         position: relative; 
-        padding: 5px 15px;
+        padding: 0 10px;
     }
     &_top--openMenu{
-        width: 35px;
+        width: 30px;
         max-width: 50px;
-        min-height: 35px;
+        min-height: 30px;
         max-height: 50px;
         cursor: pointer;
     }
     &_top--logo{
-        width: 18%;
-        max-width: 70px;
+        width: 15%;
+        max-width: 50px;
         position: absolute;
         cursor: pointer;
         left: 40%;
@@ -76,100 +70,83 @@
         color: $primary-color; 
         background: none;
         cursor: pointer;
-    }
-}
-
-
-.nav{
-
-    &_menuLogo{
-        width: 50%;
-        height: 50px;
-        display: flex;
-        flex-direction: row-reverse;
-        justify-content: space-between;
-    }
-    
-    &menuLogo--img{
-        height: 50px;
-        max-width: 50px;
+        text-shadow: 0px 0px 2px #5a13a4;
+        font-size: 14px;
     }
 
-    &menuLogo--abrirMenu {
-        width: 25%;
-        border: none;
-        background-color: #fff;
-        flex-direction: row-reverse;
-        cursor: pointer;
+    &_menu{
+        width: 70%;
+        min-height: 100vh;
+        @include flex-column-center;
+        justify-content: start;
+        padding: 50px 0;
+        max-width: 400px;
+        gap: 40px;
+        background: #6023a0f7;
+        color: #fff;
+        position: absolute;
+        left: 0;
+        top: 0;
+        transition: width 0.5s , opacity 0.3s;
         opacity: 1;
-        pointer-events: all;
-    
+
+        a {
+            text-decoration: none;
+            color: #dddddd;
+        }
     }
 
-    &_sing{
-        width: 25%;
-        font-size: 12px;
-        font-weight: 300;
-        background-color: #fff;
-        color: #5F15AD;
-        border: none;
-        font-family: sans-serif;
+    &_listMenu{
+        padding: 20px 0 0;
+        list-style: none;
+        @include flex-column-center;
+        gap: 20px;
     }
 
-    
-    
+    &_itemMenu{
+        font-weight: 600;
+        font-size: 14px;
+
+        a {
+            text-decoration: none;
+            color: #dddddd;
+        }
+    }
+
+    &_itemMenu:hover {
+        border-bottom: 1px solid rgb(25, 196, 45); 
+    }
+}
+#btn_LogIn{
+    min-width: 0px;
+    min-height: 0px;
+    font-size: 0;
+   // position: absolute;
+}
+#btnCloseMenu{
+    width: 30px;
+    max-width: 40px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    cursor: pointer;
 }
 
-.menu{
-    flex-direction: column;
-    position: fixed;
-    left: 0%;
-    top: 0%;
-    width: 100%;
-    align-items: center;
-    background-color: #000000;
-    height: 100%;
-    overflow-y: auto;
-
-    opacity: 0;
-    pointer-events: none;
-    transition: opacity 0.3s;
-
-    &_li{
-        padding: 0;
-    }
-
-    &_a{
-        color: #5F15AD;
-        line-height: 60px;
-    }
-
-    &_cerrarMenu{
-        display: block;
-        border: none;
-        background: none;
-        cursor: pointer;
-        align-self: flex-start;
-        padding: 20px 15px;
-    }
-    
+.menu--hidden{
+    max-width: 0px;
+    max-height: 0px;
 }
 
-.menuAbierto{
-    opacity: 1;
-    pointer-events: all;
-
-}
 
 .welcomeBox{
     width: 100%;
     @include flex-column-center;
-    gap: 20px; 
+    gap: 40px; 
 
     &_container{
         width: 100%;
         @include flex-column-center;
-        gap: 20px;
+        gap: 30px;
         
     }
 
@@ -183,44 +160,58 @@
     }
     
     &_text{
-       // width: 70%;
         text-align: center;
         color: $secundary-color;
     }
 
     &_button{
-        padding: 5px 10px;
+        padding: 8px 15px;
         border-radius: 5px;
         border: none;
         color: #fff;
         background-color: #1DAD4B;
         cursor: pointer;
+        box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#2c7543 0 -3px 0 inset;
+        transition: box-shadow .15s,transform .15s;
     }
 
+    &_button:focus {
+        box-shadow: #2c7543 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #2c7543 0 -3px 0 inset;
+    }
+
+    &_button:hover {
+        box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #2c7543 0 -3px 0 inset;
+        transform: translateY(-2px);
+    }
+
+    &_button:active {
+        box-shadow: #2c7543 0 3px 7px inset;
+        transform: translateY(2px);
+    }
+    
     &_img{
         width: 80%;
         max-width: 250px;
-    }
-    
+    } 
 }
 
 .advantage{
     width: 100%;
     @include flex-column-center;
     align-content: center;
-    //gap: 40px;
 
     &_container{
         width: 100%;
         @include flex-column-center;
         gap: 20px;
-
     }
 
     &_section{
-        width: 80%;
+        width: 50%;
+        max-width: 300px;
         @include flex-column-row;
         gap: 10px;
+        justify-content: flex-start;
     }
 
     &_section--img{
@@ -231,6 +222,8 @@
     }
 
     &_section--h2{
+        min-width: 80px;
+        max-width: 200px;
         font-size: 14px;
         color: #BE7100;
     }
@@ -249,7 +242,6 @@
         width: 100%;
         @include flex-column-center;
         gap: 20px;
-
     }
 
     &_tittle{
@@ -290,10 +282,19 @@
     }
 
 
+    &_logoRedes{
+        width: 40%;
+        max-width: 120px;
+        display: flex;
+        flex-direction: row;
+        justify-content: space-around;
+        align-items: center;
+    }
+
     &_logo{
-        width: 35px;
+        min-width: 35px;
         max-width: 50px;
-        min-height: 35px;
+        //min-height: 35px;
     }
 
     &_img--logo{
@@ -320,28 +321,26 @@
 @media (min-width: 750px) {
 
     .landingPage{
-
-        //max-width: 900px;
-
-        &_header{
-            //max-width: 900px;
-        }
+   
         &_main{
             max-width: 800px;
         }
-
     }
+
+    .header{
+        &_top--singIn{
+            font-size: 16px;
+        }
+    }
+
     .welcomeBox{
-
-        //&_tittle{
-        //    width: 60%;
-        //}
-
         &_img{
             max-width: 340px;
         }
     }
+
     .advantage{
+        flex-direction: row;
 
         &_section--img{
             max-width: 80px;
@@ -352,6 +351,7 @@
             font-size: 16px;
         }
     }
+
     .about{
 
         &_text{
@@ -362,12 +362,8 @@
             max-width: 340px;
         }
     }
+
     .footer{
-
-        &_img--logo{
-            margin-left: 100% ;
-        }
-
         .autor{
             max-width: 400px;
         }
@@ -377,34 +373,141 @@
 @media (min-width: 1024px) {
 
     .landingPage{
-        //max-width: 1220px;
-
         &_header{
-            //max-width: 1220px;
             height: 70px;
+            flex-direction: row;
         }
 
         &_main{
             max-width: 1000px;
         }
-
-        // &_main--welcomeBOx{
-        //     //max-width: 800px;
-        //     flex-direction: row-reverse;
-        // }
-     
     }
+
+    #btn_LogIn{
+        width: 120px;
+        height: 30px;
+        font-size: 18px;
+        border-radius: 10px;
+        background: #36c047;
+        color: #c0eecf;
+
+        &:hover{
+            background: $primary-color;
+            color: $tertiary-color;
+        }
+    }
+
+    .header{
+        &_top{
+            width: 100%;
+            display: flex;
+            flex-direction: row-reverse;
+            align-content: center;
+            align-items: center;
+            position: relative;
+            padding: 0 10px;
+            justify-content: space-between;
+
+            & div{
+                display: flex;
+                flex-direction: row-reverse;
+                justify-content: center;
+                align-items: center;
+                gap: 10px;
+            }
+        }
+        
+
+        &_top--openMenu{
+            width: 0;
+            position: absolute;
+        }
+
+        &_top--closeMenu{
+            width: 0;
+        }
+
+        &_top--singIn{
+            font-size: 18px;
+            color: #F7990F;
+            font-weight: bold;
+            text-shadow: none;
+        }
+
+        &_top--logo{
+            max-width: 70px;
+            position: initial;
+        }
+
+        &_menu{
+            
+            width: 50%;
+            min-height: 70px;
+            padding: 0;
+            /* position: relative; */
+            left: 20%;
+            /* position: initial; */
+            /* overflow: visible; */
+    
+            a {
+                color: #9638FA;
+                font-size: 18px;
+                font-weight: 700;
+            }
+        }
+    
+        &_listMenu{
+            width: 400px;
+            max-width: 550px;
+            flex-direction: row;
+            /* display: flex; */
+            /* gap: 20px; */
+            margin: 20px 0 20px 30px;
+            padding: 8px;
+            /* justify-content: center; */
+            /* align-items: center; */
+        }
+    
+        &_itemMenu{
+            width: auto;
+            padding: 0px;
+            font-weight: 500;
+    
+            // a {
+            //     text-decoration: none;
+            //     color: #dddddd;
+            // }
+        }
+    
+        // &_itemMenu:hover {
+        //     border-bottom: 1px solid rgb(25, 196, 45); 
+        // }
+    }
+
+    #btnCloseMenu{
+        width: 0;
+    }
+    
+    // #btnClose{
+    //     width: 30px;
+    //     max-width: 40px;
+    //     position: absolute;
+    //     top: 10px;
+    //     right: 10px;
+    //     cursor: pointer;
+    // }
+    
+
 
     .welcomeBox{
 
         flex-direction: row-reverse;
 
         &_tittle{
-        //    width: 60%;
             font-size: 28px;
         }
+
         &_text{
-        //    width: 60%;
             font-size: 22px;
         }
 
@@ -441,9 +544,7 @@
         &_autor{
             position: absolute;
         }
-    }
-
-    
+    }  
 }
 
 
