--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -29,8 +29,10 @@
         gap:5px;
     }
     &_user{
-        width: 20px;
+        min-width: 20px;
+        max-width: 50px;
         height: 20px;
+        max-height: 50px;
         border-radius: 50%;
     }
     &_userName{
