--- a/src/sass/uploadPost.scss
+++ b/src/sass/uploadPost.scss
@@ -17,8 +17,8 @@
     // font-family: sans-serif;
     // font-size: 16px;
     // font-weight: 500;
-    background-color: rgba(0, 0, 0, 0.3);
-
+    background-color: #d6d6d6ba;
+    
     &_container{
         width: 80%;
         min-width: 300px;
@@ -28,39 +28,101 @@
         @include flex-column-center;
         gap: 30px;
         border-radius: 10px;
-        background-color: aliceblue;
+        background-color: #9638fa;
+        position: relative;
+    }
+
+    &_btnClose{
+        width: 30px;
+        max-width: 40px;
+        position: absolute;
+        top: 40px;
+        right: 20px;
+        cursor: pointer;
     }
 
     &_img{
-        border: 1px solid grey;
-        border-radius: 10px;
-        padding: 20px;
+        width: 100%;
+        display: none;
+        // border: 1px solid grey;
+        // border-radius: 10px;
+        // padding: 20px;
         // background: rgb(247, 247, 247);
     }
 
     &_previewContainer{
-        max-width: 200px;
-        height: 200px;
-        border: 1px solid grey;
+        width: 80%;
+        max-width: 250px;
+        min-height: 150px;
+        max-height: 250px;
+        border: 2px solid #757575;
         border-radius: 10px;
-        background: rgb(247, 247, 247);
+        background: #dedede;
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
+        padding: 10px;
+    }
+
+    &_previewContainer--label{
+        display: flex;
+        justify-content: center;
+        align-items: center;
+        flex-direction: column;
     }
 
     &_preview{
-        width: 100%;
-        height: 100%;
-        object-fit: cover;
+        width: 50%;
     }
 
     &_text{
         min-height: 40px;
         max-height: 60px;
         padding: 5px 10px;
-        border: 1px solid grey;
+        border: none;
+        /* border: 1px solid grey; */
+        background: #cba6f2;
         border-radius: 5px;
+        box-shadow: inset #311351 0px 1px 4px;
+
+        &:focus {
+            outline: none;
+            background: #e5d3f9;
+           // border: 1px solid #cba6f2;
+        }
     }
 
-    &_btnPost{
-        @include button
+    &_btn{
+        padding: 5px 15px;
+        border-radius: 8px;
+        border: none;
+        background: #1DAD4B;
+        /* border: 1px solid #2c7543; */
+        box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
+        color: #1EFA63;
+        cursor: pointer;
+
+        &:hover {
+            background: #1a9942;
+            color: #9ef0b7;
+        }
+
+        &:active {
+            background: orange;
+            color: #9e7108;
+        }
+    }
+
+    &_btnClosed{
+        width: 30px;
+        max-width: 40px;
+        position: absolute;
+        top: 10px;
+        right: 10px;
+        background: url('../img/close.png') no-repeat center/cover;
+        height: 20px;
+        border: none;
+        cursor: pointer;
     }
 }
