--- a/src/styles/comment.css
+++ b/src/styles/comment.css
@@ -25,10 +25,11 @@
     padding: 0 10px;
     gap: 5px; }
   .comment_photoUser {
-    width: 15px;
+    width: 20px;
     max-width: 30px;
-    min-height: 15px;
-    max-height: 30px; }
+    min-height: 20px;
+    max-height: 30px;
+    border-radius: 50%; }
   .comment_nameUser {
     font-size: 14px; }
   .comment_txtComment {
