--- a/src/styles/landingPage.css
+++ b/src/styles/landingPage.css
@@ -9,10 +9,11 @@
     max-height: 0px; }
   .landingPage_header {
     width: 100%;
-    min-height: 60px;
+    min-height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
+    justify-content: space-between;
     padding: 5px 0;
     background-color: #fff; }
   .landingPage_header--nav {
@@ -30,7 +31,7 @@
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 40px; }
+    gap: 60px; }
   .landingPage_footer {
     width: 100%;
     padding: 5px;
@@ -41,25 +42,25 @@
     background: #fff; }
 
 .header_top {
-  width: 90%;
+  width: 100%;
   display: flex;
   flex-direction: row;
   justify-content: space-between;
   align-content: center;
   align-items: center;
   position: relative;
-  padding: 5px 15px; }
+  padding: 0 10px; }
 
 .header_top--openMenu {
-  width: 35px;
+  width: 30px;
   max-width: 50px;
-  min-height: 35px;
+  min-height: 30px;
   max-height: 50px;
   cursor: pointer; }
 
 .header_top--logo {
-  width: 18%;
-  max-width: 70px;
+  width: 15%;
+  max-width: 50px;
   position: absolute;
   cursor: pointer;
   left: 40%; }
@@ -68,66 +69,67 @@
   border-style: none;
   color: #5F15AD;
   background: none;
+  cursor: pointer;
+  text-shadow: 0px 0px 2px #5a13a4;
+  font-size: 14px; }
+
+.header_menu {
+  width: 70%;
+  min-height: 100vh;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  justify-content: start;
+  padding: 50px 0;
+  max-width: 400px;
+  gap: 40px;
+  background: #6023a0f7;
+  color: #fff;
+  position: absolute;
+  left: 0;
+  top: 0;
+  transition: width 0.5s , opacity 0.3s;
+  opacity: 1; }
+  .header_menu a {
+    text-decoration: none;
+    color: #dddddd; }
+
+.header_listMenu {
+  padding: 20px 0 0;
+  list-style: none;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  flex-direction: column;
+  gap: 20px; }
+
+.header_itemMenu {
+  font-weight: 600;
+  font-size: 14px; }
+  .header_itemMenu a {
+    text-decoration: none;
+    color: #dddddd; }
+
+.header_itemMenu:hover {
+  border-bottom: 1px solid #19c42d; }
+
+#btn_LogIn {
+  min-width: 0px;
+  min-height: 0px;
+  font-size: 0; }
+
+#btnCloseMenu {
+  width: 30px;
+  max-width: 40px;
+  position: absolute;
+  top: 10px;
+  right: 10px;
   cursor: pointer; }
 
-.nav_menuLogo {
-  width: 50%;
-  height: 50px;
-  display: flex;
-  flex-direction: row-reverse;
-  justify-content: space-between; }
-
-.navmenuLogo--img {
-  height: 50px;
-  max-width: 50px; }
-
-.navmenuLogo--abrirMenu {
-  width: 25%;
-  border: none;
-  background-color: #fff;
-  flex-direction: row-reverse;
-  cursor: pointer;
-  opacity: 1;
-  pointer-events: all; }
-
-.nav_sing {
-  width: 25%;
-  font-size: 12px;
-  font-weight: 300;
-  background-color: #fff;
-  color: #5F15AD;
-  border: none;
-  font-family: sans-serif; }
-
-.menu {
-  flex-direction: column;
-  position: fixed;
-  left: 0%;
-  top: 0%;
-  width: 100%;
-  align-items: center;
-  background-color: #000000;
-  height: 100%;
-  overflow-y: auto;
-  opacity: 0;
-  pointer-events: none;
-  transition: opacity 0.3s; }
-  .menu_li {
-    padding: 0; }
-  .menu_a {
-    color: #5F15AD;
-    line-height: 60px; }
-  .menu_cerrarMenu {
-    display: block;
-    border: none;
-    background: none;
-    cursor: pointer;
-    align-self: flex-start;
-    padding: 20px 15px; }
-
-.menuAbierto {
-  opacity: 1;
-  pointer-events: all; }
+.menu--hidden {
+  max-width: 0px;
+  max-height: 0px; }
 
 .welcomeBox {
   width: 100%;
@@ -135,14 +137,14 @@
   align-items: center;
   justify-content: center;
   flex-direction: column;
-  gap: 20px; }
+  gap: 40px; }
   .welcomeBox_container {
     width: 100%;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
-    gap: 20px; }
+    gap: 30px; }
   .welcomeBox_tittle {
     width: 70%;
     margin-top: 20px;
@@ -156,12 +158,22 @@
     text-align: center;
     color: #F7990F; }
   .welcomeBox_button {
-    padding: 5px 10px;
+    padding: 8px 15px;
     border-radius: 5px;
     border: none;
     color: #fff;
     background-color: #1DAD4B;
-    cursor: pointer; }
+    cursor: pointer;
+    box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #2c7543 0 -3px 0 inset;
+    transition: box-shadow .15s,transform .15s; }
+  .welcomeBox_button:focus {
+    box-shadow: #2c7543 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #2c7543 0 -3px 0 inset; }
+  .welcomeBox_button:hover {
+    box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #2c7543 0 -3px 0 inset;
+    transform: translateY(-2px); }
+  .welcomeBox_button:active {
+    box-shadow: #2c7543 0 3px 7px inset;
+    transform: translateY(2px); }
   .welcomeBox_img {
     width: 80%;
     max-width: 250px; }
@@ -181,18 +193,22 @@
     flex-direction: column;
     gap: 20px; }
   .advantage_section {
-    width: 80%;
+    width: 50%;
+    max-width: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
-    gap: 10px; }
+    gap: 10px;
+    justify-content: flex-start; }
   .advantage_section--img {
     width: 40px;
     max-width: 60px;
     min-height: 40px;
     max-height: 60px; }
   .advantage_section--h2 {
+    min-width: 80px;
+    max-width: 200px;
     font-size: 14px;
     color: #BE7100; }
 
@@ -245,10 +261,17 @@
   justify-content: space-between;
   border-bottom: 1px solid #5F15AD; }
 
+.footer_logoRedes {
+  width: 40%;
+  max-width: 120px;
+  display: flex;
+  flex-direction: row;
+  justify-content: space-around;
+  align-items: center; }
+
 .footer_logo {
-  width: 35px;
-  max-width: 50px;
-  min-height: 35px; }
+  min-width: 35px;
+  max-width: 50px; }
 
 .footer_img--logo {
   width: 100%; }
@@ -269,27 +292,96 @@
 @media (min-width: 750px) {
   .landingPage_main {
     max-width: 800px; }
+  .header_top--singIn {
+    font-size: 16px; }
   .welcomeBox_img {
     max-width: 340px; }
-  .advantage_section--img {
-    max-width: 80px;
-    max-height: 80px; }
-  .advantage_section--h2 {
-    font-size: 16px; }
+  .advantage {
+    flex-direction: row; }
+    .advantage_section--img {
+      max-width: 80px;
+      max-height: 80px; }
+    .advantage_section--h2 {
+      font-size: 16px; }
   .about_text {
     max-width: 380px; }
   .about_img {
     max-width: 340px; }
-  .footer_img--logo {
-    margin-left: 100%; }
   .footer .autor {
     max-width: 400px; } }
 
 @media (min-width: 1024px) {
   .landingPage_header {
-    height: 70px; }
+    height: 70px;
+    flex-direction: row; }
   .landingPage_main {
     max-width: 1000px; }
+  #btn_LogIn {
+    width: 120px;
+    height: 30px;
+    font-size: 18px;
+    border-radius: 10px;
+    background: #36c047;
+    color: #c0eecf; }
+    #btn_LogIn:hover {
+      background: #5F15AD;
+      color: #1DAD4B; }
+  .header_top {
+    width: 100%;
+    display: flex;
+    flex-direction: row-reverse;
+    align-content: center;
+    align-items: center;
+    position: relative;
+    padding: 0 10px;
+    justify-content: space-between; }
+    .header_top div {
+      display: flex;
+      flex-direction: row-reverse;
+      justify-content: center;
+      align-items: center;
+      gap: 10px; }
+  .header_top--openMenu {
+    width: 0;
+    position: absolute; }
+  .header_top--closeMenu {
+    width: 0; }
+  .header_top--singIn {
+    font-size: 18px;
+    color: #F7990F;
+    font-weight: bold;
+    text-shadow: none; }
+  .header_top--logo {
+    max-width: 70px;
+    position: initial; }
+  .header_menu {
+    width: 50%;
+    min-height: 70px;
+    padding: 0;
+    /* position: relative; */
+    left: 20%;
+    /* position: initial; */
+    /* overflow: visible; */ }
+    .header_menu a {
+      color: #9638FA;
+      font-size: 18px;
+      font-weight: 700; }
+  .header_listMenu {
+    width: 400px;
+    max-width: 550px;
+    flex-direction: row;
+    /* display: flex; */
+    /* gap: 20px; */
+    margin: 20px 0 20px 30px;
+    padding: 8px;
+    /* justify-content: center; */
+    /* align-items: center; */ }
+  .header_itemMenu {
+    width: auto;
+    padding: 0px;
+    font-weight: 500; }
+  #btnCloseMenu {
+    width: 0; }
   .welcomeBox {
     flex-direction: row-reverse; }
     .welcomeBox_tittle {
