--- a/src/styles/loginPage.css
+++ b/src/styles/loginPage.css
@@ -65,18 +65,25 @@
     cursor: pointer;
     font-size: 11px; }
   .loginPage_singInGoogle {
-    padding-bottom: 5px;
-    gap: 5px;
+    background: #fff;
+    padding: 10px;
+    border-radius: 5px;
+    gap: 24px;
     display: flex;
     align-items: center;
     justify-content: center;
-    flex-direction: row; }
+    flex-direction: row;
+    box-shadow: 1 2 3 grey;
+    margin-bottom: 10px; }
   .loginPage_singInGoogle--logo {
-    width: 15%;
-    max-width: 35px; }
+    width: 18px; }
   .loginPage_singInGoogle--text {
-    font-size: 11px;
-    color: #1DAD4B;
+    font-size: 14px;
+    font-family: sans-serif;
+    color: #757575;
+    font-weight: 600;
+    text-decoration: none;
+    color: #000000 / 0,0,0 0.53;
     cursor: pointer; }
   .loginPage_singUp--register {
     font-size: 11px;
