--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -34,8 +34,10 @@
     flex-direction: row;
     gap: 5px; }
   .postContainer_user {
-    width: 20px;
+    min-width: 20px;
+    max-width: 50px;
     height: 20px;
+    max-height: 50px;
     border-radius: 50%; }
   .postContainer_userName {
     font-size: 14px;
