--- a/src/styles/uploadPost.css
+++ b/src/styles/uploadPost.css
@@ -11,7 +11,7 @@
   display: flex;
   align-items: center;
   justify-content: center;
-  background-color: rgba(0, 0, 0, 0.3); }
+  background-color: #d6d6d6ba; }
   .uploadPost_container {
     width: 80%;
     min-width: 300px;
@@ -24,34 +24,72 @@
     flex-direction: column;
     gap: 30px;
     border-radius: 10px;
-    background-color: aliceblue; }
+    background-color: #9638fa;
+    position: relative; }
+  .uploadPost_btnClose {
+    width: 30px;
+    max-width: 40px;
+    position: absolute;
+    top: 40px;
+    right: 20px;
+    cursor: pointer; }
   .uploadPost_img {
-    border: 1px solid grey;
-    border-radius: 10px;
-    padding: 20px; }
-  .uploadPost_previewContainer {
-    max-width: 200px;
-    height: 200px;
-    border: 1px solid grey;
-    border-radius: 10px;
-    background: #f7f7f7; }
-  .uploadPost_preview {
     width: 100%;
-    height: 100%;
-    object-fit: cover; }
+    display: none; }
+  .uploadPost_previewContainer {
+    width: 80%;
+    max-width: 250px;
+    min-height: 150px;
+    max-height: 250px;
+    border: 2px solid #757575;
+    border-radius: 10px;
+    background: #dedede;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column;
+    padding: 10px; }
+  .uploadPost_previewContainer--label {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    flex-direction: column; }
+  .uploadPost_preview {
+    width: 50%; }
   .uploadPost_text {
     min-height: 40px;
     max-height: 60px;
     padding: 5px 10px;
-    border: 1px solid grey;
-    border-radius: 5px; }
-  .uploadPost_btnPost {
-    min-height: 20px;
-    max-height: 40px;
-    margin-top: 10px;
-    border: #5F15AD solid 1px;
-    background: #5F15AD;
-    border-radius: 10px;
-    padding: 0 40px;
-    color: #FFFFFF;
+    border: none;
+    /* border: 1px solid grey; */
+    background: #cba6f2;
+    border-radius: 5px;
+    box-shadow: inset #311351 0px 1px 4px; }
+    .uploadPost_text:focus {
+      outline: none;
+      background: #e5d3f9; }
+  .uploadPost_btn {
+    padding: 5px 15px;
+    border-radius: 8px;
+    border: none;
+    background: #1DAD4B;
+    /* border: 1px solid #2c7543; */
+    box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
+    color: #1EFA63;
+    cursor: pointer; }
+    .uploadPost_btn:hover {
+      background: #1a9942;
+      color: #9ef0b7; }
+    .uploadPost_btn:active {
+      background: orange;
+      color: #9e7108; }
+  .uploadPost_btnClosed {
+    width: 30px;
+    max-width: 40px;
+    position: absolute;
+    top: 10px;
+    right: 10px;
+    background: url("../img/close.png") no-repeat center/cover;
+    height: 20px;
+    border: none;
     cursor: pointer; }
