--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -29,10 +29,10 @@
         gap:5px;
     }
     &_user{
-        min-width: 20px;
-        max-width: 50px;
-        height: 20px;
-        max-height: 50px;
+        width: 30% ;
+        max-width: 60px;
+        // height: 30px;
+        // max-height: 60px;
         border-radius: 50%;
     }
     &_userName{
