--- a/src/sass/editPost.scss
+++ b/src/sass/editPost.scss
@@ -26,19 +26,9 @@
         position: relative;
     }
 
-    // &_btnClose{
-    //     width: 30px;
-    //     max-width: 40px;
-    //     position: absolute;
-    //     top: 40px;
-    //     right: 20px;
-    //     cursor: pointer;
-    // }
-
     &_img{
         width: 100%;
         display: none;
-        // background: rgb(247, 247, 247);
     }
 
     &_previewContainer{
@@ -65,7 +55,6 @@
         max-height: 60px;
         padding: 5px 10px;
         border: none;
-        /* border: 1px solid grey; */
         background: #cba6f2;
         border-radius: 5px;
         box-shadow: inset #311351 0px 1px 4px;
@@ -73,7 +62,6 @@
         &:focus {
             outline: none;
             background: #e5d3f9;
-           // border: 1px solid #cba6f2;
         }
     }
 
@@ -82,8 +70,7 @@
         border-radius: 8px;
         border: none;
         background: #1DAD4B;
-        /* border: 1px solid #2c7543; */
-        box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
+       // box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
         color: #1EFA63;
         cursor: pointer;
 
