--- a/src/sass/post.scss
+++ b/src/sass/post.scss
@@ -25,14 +25,15 @@
         width: 20px;
     }
     &_userBox{
+        width: 70%;
+        max-width: 300px;
         @include flex-column-row;
+        justify-content: flex-start;
         gap:5px;
     }
     &_user{
-        width: 30% ;
-        max-width: 60px;
-        // height: 30px;
-        // max-height: 60px;
+        width: 20%;
+        max-width: 50px;
         border-radius: 50%;
     }
     &_userName{
@@ -59,14 +60,11 @@
         height: 400px;
         @include perfect-center;
         background: #f7f7f769;
-        //max-height: 500px;
-        //max-width: 400px;
     }
 
     &_postImage--img{
         width: 100%;
         height: 100%;
-        // object-fit: cover;
         object-fit: contain;
     }
 
@@ -75,19 +73,6 @@
         @include flex-column-row;
         justify-content: space-between;
         padding: 0 10px 0 5px;
-
-        // &--comment{
-        //     width: 70%;
-        //     @include flex-column-row;
-        //     justify-content: flex-start;
-        //     gap: 10px;
-        // }
-
-        // &--like{
-        //     width: 10%;
-        //     @include flex-column-row;
-        //     justify-content: flex-end;
-        // }
     }
 
     &_interactionBox--comment{
