--- a/src/sass/uploadPost.scss
+++ b/src/sass/uploadPost.scss
@@ -11,12 +11,6 @@
     top: 0;
     padding: 20px 50px;
     @include perfect-center;
-    // gap: 30px;
-    //border-radius: 5px;
-    //color: #fdfdfd;
-    // font-family: sans-serif;
-    // font-size: 16px;
-    // font-weight: 500;
     background-color: #d6d6d6ba;
     
     &_container{
@@ -44,10 +38,6 @@
     &_img{
         width: 100%;
         display: none;
-        // border: 1px solid grey;
-        // border-radius: 10px;
-        // padding: 20px;
-        // background: rgb(247, 247, 247);
     }
 
     &_previewContainer{
@@ -81,7 +71,6 @@
         max-height: 60px;
         padding: 5px 10px;
         border: none;
-        /* border: 1px solid grey; */
         background: #cba6f2;
         border-radius: 5px;
         box-shadow: inset #311351 0px 1px 4px;
@@ -89,7 +78,6 @@
         &:focus {
             outline: none;
             background: #e5d3f9;
-           // border: 1px solid #cba6f2;
         }
     }
 
@@ -98,8 +86,7 @@
         border-radius: 8px;
         border: none;
         background: #1DAD4B;
-        /* border: 1px solid #2c7543; */
-        box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
+        //box-shadow: #153a21 2px 2px 3px -1px, #0a8a33 0px 1px 3px -1px;
         color: #1EFA63;
         cursor: pointer;
 
