--- a/src/styles/post.css
+++ b/src/styles/post.css
@@ -28,16 +28,17 @@
   .postContainer_editIcon {
     width: 20px; }
   .postContainer_userBox {
+    width: 70%;
+    max-width: 300px;
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: row;
+    justify-content: flex-start;
     gap: 5px; }
   .postContainer_user {
-    min-width: 50px;
-    max-width: 80px;
-    height: 50px;
-    max-height: 80px;
+    width: 20%;
+    max-width: 50px;
     border-radius: 50%; }
   .postContainer_userName {
     font-size: 14px;
